--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,7 @@ tags
 ### VisualStudioCode ###
 .vscode/*
 .history
+openshift.local.clusterup/*
+tmp/_output
+vendor/
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
