Added a Config section in the CRD to specify the configmap (#6)

--- a/deploy/cr/cr_with_configmap.yaml
+++ b/deploy/cr/cr_with_configmap.yaml
@@ -2,6 +2,10 @@ apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
   name: example-infinispan
+config:
+  sourceType: ConfigMap
+  sourceRef:  infinispan-app-configuration
+  name: cloud-ephemeral.xml
 spec:
   size: 3
   clustername: helloworldcluster
