Prepare for first release
* Add release script that substitutes version in the operator yaml.
* Script also commits, tags and pushes release.
* Converterd Dockerfile into multi-stage Dockerfile so that docker hub
  can compile and build image online, once release has been tagged and
  pushed.

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ build/_output
 vendor/
 .idea/
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
+### Backup files ###
+*.backup
