--- a/deploy/cr/cr_with_configmap.yaml
+++ b/deploy/cr/cr_with_configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
-  # Set a name for the Infinispan pods.
+  # Set a name for the Infinispan cluster.
   name: example-infinispan
 config:
   sourceType: ConfigMap
