Added cluster info in Infinispan.status field #76

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ env:
 
 jobs:
   include:
+    - stage: "Unit Test"
+      name: "Unit Test"
+      script:
+        - go get -u github.com/golang/dep/cmd/dep
+        - make unit-test
     - stage: "Test"
       name: "OpenShift"
       script:
