--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 
 sudo: required
+dist: xenial
 
 services:
   - docker
@@ -9,14 +10,27 @@ cache:
   directories:
   - $GOPATH/pkg/dep
 
+env:
+  global:
+    - VM_DRIVER=none
+    - KUBE_VERSION=v1.14.2
+    - MINIKUBE_VERSION=v1.1.0
+    - CHANGE_MINIKUBE_NONE_USER=true
+    - KUBECONFIG=${HOME}/.kube/config
+
 before_script:
   - go get -u github.com/golang/dep/cmd/dep
-  - ci/start-okd-4.0.0.sh
+  - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/${KUBE_VERSION}/bin/linux/amd64/kubectl
+  - chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+  - curl -Lo minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64
+  - chmod +x minikube && sudo mv minikube /usr/local/bin/
+  - sudo minikube start --vm-driver=none --kubernetes-version=${KUBE_VERSION} --cpus 4 --memory 4096
+  - minikube update-context
+  - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
 
 after_failure:
   - docker ps -a
-  - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
+  - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done  - kubectl get pods -n namespace-for-testing
 
 script:
-  - make test KUBECONFIG=/tmp/openshift-dind-cluster/openshift/openshift.local.config/master/admin.kubeconfig
-
+  - make test KUBECONFIG=${HOME}/.kube/config
