updated object def yaml

--- a/deploy/cr/cr_minimal_with_auth.yaml
+++ b/deploy/cr/cr_minimal_with_auth.yaml
@@ -6,10 +6,12 @@ spec:
   size: 2
   image: jboss/infinispan-server:latest
   connector:
-    secret:
-      type: Credentials
-      secretName: auth-secret
+    authentication:
+      secret:
+        type: Credentials
+        secretName: conn-auth-secret
   management:
-    secret:
-      type: Credentials
-      secretName: auth-secret
+    authentication:
+      secret:
+        type: Credentials
+        secretName: mngt-auth-secret
