--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ env:
 
 jobs:
   include:
-    - stage: "OpenShift"
-      name: "Test"
+    - stage: "Test"
+      name: "OpenShift"
       script:
         - go get -u github.com/golang/dep/cmd/dep
         - ci/start-okd-4.0.0.sh
@@ -28,8 +28,8 @@ jobs:
         - KUBECONFIG=/tmp/openshift-dind-cluster/openshift/openshift.local.config/master/admin.kubeconfig ./oc get events --all-namespaces
         - docker ps -a
         - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
-    - stage: "Minikube"
-      name: "Test"
+    - stage: "Test"
+      name: "Minikube"
       dist: xenial
       script:
         - go get -u github.com/golang/dep/cmd/dep
@@ -37,11 +37,15 @@ jobs:
         - chmod +x kubectl && sudo mv kubectl /usr/local/bin/
         - curl -Lo minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64
         - chmod +x minikube && sudo mv minikube /usr/local/bin/
-        - sudo minikube start --vm-driver=none --kubernetes-version=${KUBE_VERSION} --cpus 4 --memory 4096
+        - sudo minikube start --vm-driver=none --kubernetes-version=${KUBE_VERSION} --memory 4096
         - minikube update-context
         - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
         - make test KUBECONFIG=${HOME}/.kube/config
         - kubectl get events --all-namespaces
+        - kubectl cluster-info
+        - df -h
+        - sudo minikube status
+        - sudo minikube logs
         - docker ps -a
         - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
         - sudo minikube stop
