Switch spec.size to spec.replicas #55
* spec.replicas used in Deployment and StatefulSet,
and so it's more idiomatic for Kubernetes.

--- a/deploy/cr/cr_minimal_with_auth.yaml
+++ b/deploy/cr/cr_minimal_with_auth.yaml
@@ -3,7 +3,7 @@ kind: Infinispan
 metadata:
   name: example-infinispan
 spec:
-  size: 2
+  replicas: 2
   image: jboss/infinispan-server:latest
   connector:
     authentication:
