--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ jobs:
         - chmod +x kubectl && sudo mv kubectl /usr/local/bin/
         - curl -Lo minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64
         - chmod +x minikube && sudo mv minikube /usr/local/bin/
-        - sudo minikube start --vm-driver=none --kubernetes-version=${KUBE_VERSION} --memory 4096
+        - sudo minikube start --vm-driver=none --kubernetes-version=${KUBE_VERSION}
         - minikube update-context
         - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
         - make test KUBECONFIG=${HOME}/.kube/config
