--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ openshift.local.clusterup/*
 build/_output
 vendor/
 .idea/
+*.iml
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 ### Backup files ###
 *.backup
