--- a/deploy/cr/cr_minimal_with_auth.yaml
+++ b/deploy/cr/cr_minimal_with_auth.yaml
@@ -4,7 +4,5 @@ metadata:
   name: example-infinispan
 spec:
   replicas: 2
-  connector:
-    authentication:
-      type: Credentials
-      secretName: connect-secret
+  security:
+    endpointSecret: connect-secret
