--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
     - stage: "Test"
       env:
         - 'DEFAULT_IMAGE=jboss/infinispan-server:9.4.11.Final'
+        - 'IMAGE=jboss/infinispan-server:9.4.11.Final'
       name: "OpenShift"
       script:
         - go get -u github.com/golang/dep/cmd/dep
