Update CSV file to disable multi namespace
* It's not yet supported.

--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -87,7 +87,7 @@ spec:
     - type: SingleNamespace
       supported: true
     - type: MultiNamespace
-      supported: true
+      supported: false
     - type: AllNamespaces
       supported: false
   install:
