Fix 0.x branch on the latest 9.x release

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -34,4 +34,4 @@ spec:
             - name: OPERATOR_NAME
               value: "infinispan-operator"
             - name: DEFAULT_IMAGE
-              value: "jboss/infinispan-server:latest"
+              value: "jboss/infinispan-server:9.4.11.Final"
