--- a/deploy/cr/auth/connect_secret.yaml
+++ b/deploy/cr/auth/connect_secret.yaml
@@ -5,6 +5,6 @@ metadata:
 type: Opaque
 stringData:
   identities.yaml: |-
-    credentials
+    credentials:
     - username: developer
       password: changeme
