--- a/deploy/cr/tls/cr_minimal_with_tls.yaml
+++ b/deploy/cr/tls/cr_minimal_with_tls.yaml
@@ -6,10 +6,13 @@ spec:
   replicas: 2
   security:
     endpointEncryption:
+            # type=service to use the cert service provided by the platform
+            # tape=secret to use a user provided secret with certs inside
+            type: secret
             # certSecretName is the name of the secret containing certificates,
-            # used is certService field is NOT provided.
             # see e.g. deploy/cr/tls/tls_secret.yaml
             certSecretName: tls-secret
+            # certService is the platform service that provides the certificats
             # If you want your certificates to be served by OpenShift
-            # uncomment the following line
+            # uncomment the following line and change above type to service
             # certService: service.beta.openshift.io/serving-cert-secret-name
