--- a/documentation/asciidoc/topics/yaml_examples/cr_minimal_with_auth.yaml
+++ b/documentation/asciidoc/topics/yaml_examples/cr_minimal_with_auth.yaml
@@ -1,8 +1,8 @@
-$ cat > cr_minimal.yaml<<EOF
 apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
   name: {example_crd_name}
 spec:
-  replicas: 3
-EOF
+  replicas: 2
+  security:
+    endpointSecret: connect-secret
