--- a/deploy/olm-catalog/infinispan-operator.v1.0.0.Alpha4.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.v1.0.0.Alpha4.clusterserviceversion.yaml
@@ -3,7 +3,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: infinispan-operator.v9.9.9
+  name: infinispan-operator.v1.0.0.Alpha4
   namespace: placeholder
   annotations:
     tectonic-visibility: ocs
@@ -24,8 +24,8 @@ metadata:
         }
       ]
     description: Create and manage Infinispan clusters.
-    containerImage: docker.io/jboss/infinispan-operator:latest
-    createdAt: 2000-01-01T12:00:00Z
+    containerImage: docker.io/jboss/infinispan-operator:1.0.0.Alpha4
+    createdAt: 2019-09-25T15:29:07Z
     support: Infinispan
     certified: "false"
 spec:
@@ -53,7 +53,7 @@ spec:
     Each Infinispan pod requests `0.5` CPUs and 512MiB of memory.
     You can adjust resource allocation with the `.spec.container.cpu` and `.spec.container.memory` fields.
   keywords: ['infinispan', 'key value', 'database', 'datagrid', 'open source']
-  version: 9.9.9
+  version: 1.0.0.Alpha4
   minKubeVersion: 1.11.0
   maturity: alpha
   maintainers:
@@ -61,7 +61,7 @@ spec:
       email: infinispan-dev@lists.jboss.org
   provider:
     name: Infinispan
-  replaces: infinispan-operator.v9.9.8
+  replaces: infinispan-operator.v0.3.2
   labels:
     operated-by: infinispan-operator
   selector:
@@ -160,7 +160,7 @@ spec:
                   - name: infinispan-operator
                     command:
                       - infinispan-operator
-                    image: jboss/infinispan-operator:latest
+                    image: jboss/infinispan-operator:1.0.0.Alpha4
                     ports:
                       - containerPort: 60000
                         name: metrics
@@ -176,7 +176,7 @@ spec:
                       - name: OPERATOR_NAME
                         value: "infinispan-operator"
                       - name: DEFAULT_IMAGE
-                        value: "jboss/infinispan-server:latest"
+                        value: "jboss/infinispan-server:10.0.0.CR2"
   customresourcedefinitions:
     owned:
       - name: infinispans.infinispan.org
