--- a/deploy/olm-catalog/infinispan.package.yaml
+++ b/deploy/olm-catalog/infinispan.package.yaml
@@ -1,4 +1,4 @@
 packageName: infinispan
 channels:
 - name: alpha
-  currentCSV: infinispan-operator.v9.9.9
+  currentCSV: infinispan-operator.v1.0.0.Alpha4
