Docs for operator credentials #167

--- a/deploy/cr/auth/connect_secret.yaml
+++ b/deploy/cr/auth/connect_secret.yaml
@@ -8,3 +8,5 @@ stringData:
     credentials:
     - username: developer
       password: changeme
+    - username: operator
+      password: changemetoo
