--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: go
 
+go:
+  - '1.11.x'
+
 sudo: required
 
 services:
@@ -62,27 +65,37 @@ jobs:
 #        - KUBECONFIG=/tmp/openshift-dind-cluster/openshift/openshift.local.config/master/admin.kubeconfig ./oc get events --all-namespaces
 #        - docker ps -a
 #        - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
+
     - stage: "Test"
       env:
         - 'INFINISPAN_CPU=0.25'
         - INFINISPAN_MEMORY=384Mi
       name: "Minikube"
-      dist: xenial
+      before_script:
+        # Download and install kubectl
+        - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+
+        # Download and install KinD
+        - GO111MODULE=on go get sigs.k8s.io/kind
+        # It's possible to download and install KinD using curl, similar as for kubectl
+        # This is useful in cases when Go toolchain isn't available or you prefer running stable version
+        # Binaries for KinD are available on GitHub Releases: https://github.com/kubernetes-sigs/kind/releases
+        # - curl -Lo kind https://github.com/kubernetes-sigs/kind/releases/download/0.0.1/kind-linux-amd64 && chmod +x kind && sudo mv kind /usr/local/bin/
+
+        # Create a new Kubernetes cluster using KinD
+        - kind create cluster
+
+        # Set KUBECONFIG environment variable
+        - export KUBECONFIG="$(kind get kubeconfig-path)"
       script:
         - go get -u github.com/golang/dep/cmd/dep
-        - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/${KUBE_VERSION}/bin/linux/amd64/kubectl
-        - chmod +x kubectl && sudo mv kubectl /usr/local/bin/
-        - curl -Lo minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64
-        - chmod +x minikube && sudo mv minikube /usr/local/bin/
-        - sudo minikube start --vm-driver=none --kubernetes-version=${KUBE_VERSION}
-        - minikube update-context
-        - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
-        - make test KUBECONFIG=${HOME}/.kube/config
-        - kubectl get events --all-namespaces
-        - kubectl cluster-info
-        - df -h
-        - sudo minikube status
-        - sudo minikube logs
-        - docker ps -a
-        - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
-        - sudo minikube stop
+        - make test
+#      after_script:
+#        - kubectl get events --all-namespaces
+#        - kubectl cluster-info
+#        - df -h
+#        - sudo minikube status
+#        - sudo minikube logs
+#        - docker ps -a
+#        - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
+#        - sudo minikube stop
