--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: go
 
+go:
+  - '1.11.x'
+
 sudo: required
 
 services:
@@ -9,13 +12,6 @@ cache:
   directories:
   - $GOPATH/pkg/dep
 
-env:
-  global:
-    - VM_DRIVER=none
-    - KUBE_VERSION=v1.15.0
-    - MINIKUBE_VERSION=v1.2.0
-    - CHANGE_MINIKUBE_NONE_USER=true
-
 jobs:
   include:
     - stage: "Unit Test"
@@ -23,16 +19,7 @@ jobs:
       script:
         - go get -u github.com/golang/dep/cmd/dep
         - make unit-test
-    - stage: "Test"
-      name: "OpenShift"
-      script:
-        - go get -u github.com/golang/dep/cmd/dep
-        - ci/start-okd-4.0.0.sh
-        - make test KUBECONFIG=/tmp/openshift-dind-cluster/openshift/openshift.local.config/master/admin.kubeconfig
-        - KUBECONFIG=/tmp/openshift-dind-cluster/openshift/openshift.local.config/master/admin.kubeconfig ./oc get pods --all-namespaces
-        - KUBECONFIG=/tmp/openshift-dind-cluster/openshift/openshift.local.config/master/admin.kubeconfig ./oc get events --all-namespaces
-        - docker ps -a
-        - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
+
 #    - stage: "Test"
 #      env:
 #        - WATCH_NAMESPACE=namespace-for-testing
@@ -62,27 +49,20 @@ jobs:
 #        - KUBECONFIG=/tmp/openshift-dind-cluster/openshift/openshift.local.config/master/admin.kubeconfig ./oc get events --all-namespaces
 #        - docker ps -a
 #        - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
-#    - stage: "Test"
-#      env:
-#        - 'INFINISPAN_CPU=0.25'
-#        - INFINISPAN_MEMORY=384Mi
-#      name: "Minikube"
-#      dist: xenial
-#      script:
-#        - go get -u github.com/golang/dep/cmd/dep
-#        - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/${KUBE_VERSION}/bin/linux/amd64/kubectl
-#        - chmod +x kubectl && sudo mv kubectl /usr/local/bin/
-#        - curl -Lo minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64
-#        - chmod +x minikube && sudo mv minikube /usr/local/bin/
-#        - sudo minikube start --vm-driver=none --kubernetes-version=${KUBE_VERSION}
-#        - minikube update-context
-#        - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
-#        - make test KUBECONFIG=${HOME}/.kube/config
-#        - kubectl get events --all-namespaces
-#        - kubectl cluster-info
-#        - df -h
-#        - sudo minikube status
-#        - sudo minikube logs
-#        - docker ps -a
-#        - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
-#        - sudo minikube stop
+
+    - stage: "Test"
+      name: "Kubernetes"
+      before_script:
+        - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+        - GO111MODULE=on go get sigs.k8s.io/kind
+        - kind create cluster --config kind-config.yaml
+        - export KUBECONFIG="$(kind get kubeconfig-path)"
+      script:
+        - go get -u github.com/golang/dep/cmd/dep
+        - make test
+      after_failure:
+        - kubectl get events --all-namespaces
+        - kubectl cluster-info
+        - df -h
+        - docker ps -a
+        - for log in $(docker ps -qa | xargs); do docker logs --tail 500 $log; done
