--- a/deploy/olm-catalog/infinispan-operator.v1.0.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.v1.0.0.clusterserviceversion.yaml
@@ -3,7 +3,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: infinispan-operator.v1.0.0.Alpha4
+  name: infinispan-operator.v1.0.0
   namespace: placeholder
   annotations:
     tectonic-visibility: ocs
@@ -24,7 +24,7 @@ metadata:
         }
       ]
     description: Create and manage Infinispan clusters.
-    containerImage: docker.io/jboss/infinispan-operator:1.0.0.Alpha4
+    containerImage: docker.io/jboss/infinispan-operator:1.0.0
     createdAt: 2019-09-25T15:29:07Z
     support: Infinispan
     certified: "false"
@@ -53,7 +53,7 @@ spec:
     Each Infinispan pod requests `0.5` CPUs and 512MiB of memory.
     You can adjust resource allocation with the `.spec.container.cpu` and `.spec.container.memory` fields.
   keywords: ['infinispan', 'key value', 'database', 'datagrid', 'open source']
-  version: 1.0.0.Alpha4
+  version: 1.0.0
   minKubeVersion: 1.11.0
   maturity: alpha
   maintainers:
@@ -160,7 +160,7 @@ spec:
                   - name: infinispan-operator
                     command:
                       - infinispan-operator
-                    image: jboss/infinispan-operator:1.0.0.Alpha4
+                    image: jboss/infinispan-operator:1.0.0
                     ports:
                       - containerPort: 60000
                         name: metrics
