--- a/documentation/asciidoc/topics/yaml_annotated/cr_tls_service.yaml
+++ b/documentation/asciidoc/topics/yaml_annotated/cr_tls_service.yaml
@@ -3,5 +3,5 @@ spec:
   security:
     endpointEncryption: <1>
             type: service <2>
-            certService: service.beta.openshift.io <3>
+            certServiceName: service.beta.openshift.io <3>
             certSecretName: tls-secret <4>
