--- a/documentation/asciidoc/topics/yaml_examples/cr_tls_service.yaml
+++ b/documentation/asciidoc/topics/yaml_examples/cr_tls_service.yaml
@@ -7,5 +7,5 @@ spec:
   security:
     endpointEncryption:
             type: service
-            certService: service.beta.openshift.io
+            certServiceName: service.beta.openshift.io
             certSecretName: tls-secret
