Update X-Site design doc, use .secretName #194
* Use .secretName instead of .secret in X-Site configuration.
* Update design document for latest X-Site changes.
* Don't export unnecessary functions

--- a/deploy/cr/xsite-minikube/xsite_a.yaml
+++ b/deploy/cr/xsite-minikube/xsite_a.yaml
@@ -16,4 +16,4 @@ spec:
       backups:
       - name: SiteB
         url: minikube://192.168.99.148:8443
-        secret: site-b-secrets
+        secretName: site-b-secrets
