--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -61,6 +61,9 @@ spec:
   provider:
     name: Infinispan
   replaces: infinispan-operator.v9.9.8
+  relatedImages:
+    - name: infinispan-server
+      image: infinispan/server:latest
   labels:
     operated-by: infinispan-operator
   selector:
