--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: placeholder
   annotations:
     tectonic-visibility: ocs
-    capabilities: Basic Install
+    capabilities: Full Lifecycle
     categories: "Database"
     repository: https://github.com/infinispan/infinispan-operator
     alm-examples: |
